# app/Http/Controllers/NoteController.php
@@ -5,29 +5,42 @@ namespace App\Http\Controllers;
 use Illuminate\Http\Request;
 use App\Models\Tag;
 use App\Models\Note;
-
+use Illuminate\Foundation\Auth\Access\AuthorizesRequests;
+use App\Http\Requests\NoteRequest;
+use App\Http\Resources\NoteResource;
 /**
  * @OA\Info(
- *     title="Laravel API Documentation",
- *     version="1.0.0",
+ *     title="Zennex API Documentation",
+ *     version="1.0.1",
  * )
  */
 class NoteController extends Controller
 {
+    use AuthorizesRequests;
     /**
-     * @OA\Get(
-     *     path="/api/notes",
-     *     summary="Получить все заметки пользователя",
-     *     tags={"Notes"},
-     *     @OA\Response(
-     *         response=200,
-     *         description="Список заметок"
-     *     )
-     * )
-     */
+ * @OA\Get(
+ *     path="/api/notes",
+ *     summary="Получение списка заметок",
+ *     description="Возвращает список всех заметок",
+ *     tags={"Notes"},
+ *     @OA\Response(
+ *         response=200,
+ *         description="Список заметок",
+ *         @OA\JsonContent(
+ *             type="array",
+ *             @OA\Items(ref="#/components/schemas/Note")
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=404,
+ *         description="Заметки не найдены"
+ *     )
+ * )
+ */
     public function index()
     {
-        return auth()->user()->notes()->with('tags')->get();
+        $notes = auth()->user()->notes()->with('tags')->get();
+        return NoteResource::collection($notes);
     }
 
     /**
@@ -59,7 +72,7 @@ class NoteController extends Controller
     public function show(Note $note)
     {
         $this->authorize('view', $note);
-        return $note->load('tags');
+        return new NoteResource($note->load('tags'));
     }
     /**
      * @OA\Post(
@@ -84,13 +97,9 @@ class NoteController extends Controller
      *     )
      * )
      */
-    public function store(Request $request)
+    public function store(NoteRequest $request)
     {
-        $validated = $request->validate([
-            'title' => 'required',
-            'content' => 'required',
-            'tags' => 'array'
-        ]);
+        $validated = $request->validated();
 
         $note = auth()->user()->notes()->create($validated);
 
@@ -99,45 +108,53 @@ class NoteController extends Controller
             $note->tags()->sync($tags);
         }
 
-        return response()->json($note->load('tags'), 201);
+        return new NoteResource($note->load('tags'));
     }
-
      /**
-     * @OA\Put(
-     *     path="/api/notes/{id}",
-     *     summary="Обновить заметку",
-     *     tags={"Notes"},
-     *     @OA\Parameter(
-     *         name="id",
-     *         in="path",
-     *         required=true,
-     *         @OA\Schema(type="integer")
-     *     ),
-     *     @OA\RequestBody(
-     *         required=true,
-     *         @OA\JsonContent(
-     *             @OA\Property(property="title", type="string", example="Обновленный заголовок"),
-     *             @OA\Property(property="content", type="string", example="Обновленное содержание")
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=200,
-     *         description="Заметка обновлена"
-     *     ),
-     *     @OA\Response(
-     *         response=404,
-     *         description="Заметка не найдена"
-     *     )
-     * )
-     */
-    public function update(Request $request, Note $note)
-    {
-        $this->authorize('update', $note);
-        $validated = $request->validate([
-            'title' => 'required',
-            'content' => 'required',
-            'tags' => 'array'
-        ]);
+ * @OA\Put(
+ *     path="/notes/{id}",
+ *     summary="Обновление заметки",
+ *     description="Обновляет существующую заметку и синхронизирует теги.",
+ *     tags={"Notes"},
+ *     @OA\Parameter(
+ *         name="id",
+ *         in="path",
+ *         description="ID заметки для обновления",
+ *         required=true,
+ *         @OA\Schema(
+ *             type="integer"
+ *         )
+ *     ),
+ *     @OA\RequestBody(
+ *         required=true,
+ *         @OA\JsonContent(
+ *             required={"title", "content"},
+ *             @OA\Property(property="title", type="string", description="Заголовок заметки"),
+ *             @OA\Property(property="content", type="string", description="Содержимое заметки"),
+ *             @OA\Property(property="tags", type="array", description="Массив тегов",
+ *                 @OA\Items(type="string")
+ *             )
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="Успешное обновление заметки",
+ *         @OA\JsonContent(ref="#/components/schemas/Note")
+ *     ),
+ *     @OA\Response(
+ *         response=403,
+ *         description="Доступ запрещен"
+ *     ),
+ *     @OA\Response(
+ *         response=404,
+ *         description="Заметка не найдена"
+ *     )
+ * )
+ */
+public function update(NoteRequest $request, Note $note)
+{
+     $this->authorize('update', $note);
+        $validated = $request->validated();
 
         $note->update($validated);
 
@@ -146,31 +163,31 @@ class NoteController extends Controller
             $note->tags()->sync($tags);
         }
 
-        return $note->load('tags');
-    }
+        return new NoteResource($note->load('tags'));
+}
  /**
      * @OA\Delete(
      *     path="/api/notes/{id}",
      *     tags={"Notes"},
-     *     summary="Delete a specific note",
+     *     summary="Удалить заметку",
      *     @OA\Parameter(
      *         name="id",
      *         in="path",
      *         required=true,
-     *         description="ID of the note",
+     *         description="ID заметки",
      *         @OA\Schema(type="integer")
      *     ),
      *     @OA\Response(
      *         response=204,
-     *         description="Note deleted successfully"
+     *         description="Заметка успешно удалена"
      *     ),
      *     @OA\Response(
      *         response=404,
-     *         description="Note not found"
+     *         description="Заметка не найдена"
      *     ),
      *     @OA\Response(
      *         response=401,
-     *         description="Unauthorized"
+     *         description="Не авторизован"
      *     )
      * )
      */
@@ -180,14 +197,52 @@ class NoteController extends Controller
         $note->delete();
         return response()->json(null, 204);
     }
-
+/**
+ * @OA\Get(
+ *     path="/api/notes/search-by-tags",
+ *     summary="Поиск заметок по тегам",
+ *     description="Возвращает список заметок, соответствующих переданным тегам пользователю.",
+ *     tags={"Notes"},
+ *     @OA\Parameter(
+ *         name="tags",
+ *         in="query",
+ *         description="Массив тегов для поиска заметок",
+ *         required=true,
+ *         @OA\Schema(
+ *             type="array",
+ *             @OA\Items(
+ *                 type="string"
+ *             )
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="Список заметок текущего пользователя, соответствующих тегам",
+ *         @OA\JsonContent(
+ *             type="array",
+ *             @OA\Items(ref="#/components/schemas/Note")
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=400,
+ *         description="Неверный запрос"
+ *     ),
+ *     @OA\Response(
+ *         response=401,
+ *         description="Не авторизован"
+ *     )
+ * )
+ */
     public function searchByTags(Request $request)
     {
         $tags = $request->input('tags');
-        $notes = Note::whereHas('tags', function ($query) use ($tags) {
-            $query->whereIn('name', $tags);
-        })->get();
+        $userId = auth()->id();
+        $notes = Note::where('user_id', $userId)
+            ->whereHas('tags', function ($query) use ($tags) {
+                $query->whereIn('name', $tags);
+            })
+            ->get();
 
-        return response()->json($notes);
+        return NoteResource::collection($notes);
     }
 }
